# cell-sim

./: .gitignore  README.md  ato.yaml  example_set_voltages.py  platformio.ini
docs/: Cell.drawio
elec/footprints/: footprints.kicad_sym
elec/footprints/footprints.3dshapes/: CAP-SMD_BD10.0-L10.3-W10.3-H10.2.step  CAP-SMD_BD10.0-L10.3-W10.3-H10.2.wrl  CONN-SMD_2P-P2.00_MOLEX_5023520201 2.step  CONN-SMD_2P-P2.00_MOLEX_5023520201 2.wrl  CONN-TH_22P-P2.00_5018762240.step  CONN-TH_22P-P2.00_5018762240.wrl  HDR-TH_4P-P2.54-F-LI-1X4P.step  HDR-TH_4P-P2.54-F-LI-1X4P.wrl  IDC-TH_Z-231012820106.step  IDC-TH_Z-231012820106.wrl  IND-SMD_L7.0-W7.0-H5.5.step  IND-SMD_L7.0-W7.0-H5.5.wrl  MINISO-8_L3.0-W3.0-H0.9-P0.65-LS4.9-BL.step  PWRM-TH_L19.7-W6.0-H10.2-P2.54.wrl  PWRM-TH_YLPTEC_BXXXXS-1WR3.wrl  QFN-72_L10.0-W10.0-P0.50-BL-EP6.0_1.step  QFN-72_L10.0-W10.0-P0.50-BL-EP6.0_1.wrl  RJ45-TH_J1B1211CCD.step  RJ45-TH_J1B1211CCD.wrl  SSOP-24_L8.2-W5.3-H1.8-LS7.8-P0.65.step  SSOP-24_L8.2-W5.3-H1.8-LS7.8-P0.65.wrl  TO-252-2_3PIN-L6.6-W6.1-H3.1-P4.57-LS9.9-TL.step  TO-252-2_3PIN-L6.6-W6.1-H3.1-P4.57-LS9.9-TL.wrl
elec/footprints/footprints.pretty/: AUDIO-TH_24.243.1.kicad_mod  CAP-SMD_BD10.0-L10.3-W10.3-LS11.0-FD.kicad_mod  CONN-SMD_2P-P2.00_MOLEX_5023520201 2.kicad_mod  CONN-TH_24.243.2.kicad_mod  (+28 more)
elec/src/: cell-sim.ato  cell.ato  current-sensor.ato  ethernet.ato  relay.ato  thermistor.ato
firmware/src/: calibrate.py  cell.cpp  cell.h  main.cpp
lib/: cellsim.py  cli.py  client.py
python-library/: __init__.py
python/fusa/: example_set_voltages.py  pyproject.toml  test_script.py
(+82 files in other folders)
